<resources>
    <string name="app_name">SPP</string>
    <string name="app_name_long">Student Party Planner</string>
    <string name="button_login_text">Log in</string>
    <string name="button_register_text">Register</string>
    <string name="welcome_text">Sign up to never ever miss a party again!</string>
    <string name="logo_content_descrition">Student Party Planner Logo</string>

    <string name="logo_content_description">Logo SPP</string>

    <!--    Input fields (Edit text) -->
    <string name="email_input_hint">Email</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm password</string>

    <!--    register acitivity -->
    <string name="text_already_have_an_account">Already have an account?</string>

    <!--    login acitivity -->
    <string name="text_dont_have_an_account_yet">"Don't have an account yet?"</string>


    <!--    delete account acitvity -->
    <string name="warning_title">WARNING</string>
    <string name="warning_text">"This action will delete all profile data. You won't be able to access your data after you hit confirm!"</string>
    <string name="warning_confirmation_text">Are you sure?</string>
    <string name="delete_account_button_text">Delete account</string>
    <string name="delete_account_cancle_button_text">Cancle</string>

    <!--    send friend request activity -->
    <string name="button_send_friend_request">Send request</string>


    <!--    Tab Friends -->
    <string name="friendlist_tab">Friendlist</string>
    <string name="friend_request_tab">Requests</string>
    <string name="add_friend_button_content_description">Add friend</string>

    <!--    Tab Parties -->
    <string name="title_tab_parties">Parties</string>

    <!--    Tab Profile -->
    <string name="title_tab_profile">Profile</string>

    <!--    Edit Profile -->
    <string name="edit_profile_mobile">Mobile</string>
    <string name="edit_profile_save">Save changes</string>
    <string name="edit_profile_delete">Delete my account</string>

    <!--    Profile -->
    <string name="profile_edit">Edit Profile</string>
    <string name="profile_logout">Log out</string>

    <!--    Party -->
    <string name="party_name">Name</string>
    <string name="party_date">Date</string>
    <string name="party_location">Location</string>
    <string name="party_friends">Invite Friends</string>

    <!--    Edit Party -->
    <string name="add_party_title">Add Party</string>
<!--    <string name="edit_party_number">Number: 42</string>-->
    <string name="edit_party_details">Details</string>

    <!-- Dashboard Fragemnt  -->
    <string name="dashboard_fragment_welcome_text">Welcome to</string>
    <string name="dashboard_fragment_welcome_text2">Student Party Planner!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_default_number">0</string>
    <string name="dashboard_registered_users">Registered Users</string>
    <string name="dashboard_registered_parties">Registered Parties</string>


<!--    Bottom Menu Navigation Tabs -->
    <string name="menu_nav_dashboard">Dashboard</string>
    <string name="menu_nav_parties">Parties</string>
    <string name="menu_nav_profile">Profile</string>




</resources>
