<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddParty">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/logo_content_descrition"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/addParty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_party_title"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

<!--    <TextView-->
<!--        android:id="@+id/editPartyNumber"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="24dp"-->
<!--        android:layout_marginBottom="8dp"-->
<!--        android:textSize="18dp"-->
<!--        android:textStyle="bold"-->
<!--        android:text="@string/edit_party_number"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/imageView"-->
<!--        app:layout_constraintStart_toEndOf="@+id/imageView" />-->

    <TextView
        android:id="@+id/editPartyDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:textStyle="bold"
        android:text="@string/edit_party_details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <EditText
        android:id="@+id/addPartyName"
        style="@style/inputField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/party_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPartyDetails" />

    <EditText
        android:id="@+id/addPartyDate"
        style="@style/inputField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/party_date"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/addPartyName"
        app:layout_constraintStart_toStartOf="@+id/addPartyName"
        app:layout_constraintTop_toBottomOf="@+id/addPartyName" />

    <EditText
        android:id="@+id/addPartyLocation"
        style="@style/inputField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/party_location"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/addPartyDate"
        app:layout_constraintStart_toStartOf="@+id/addPartyDate"
        app:layout_constraintTop_toBottomOf="@+id/addPartyDate" />

    <Button
        android:id="@+id/button_add_party"
        style="@style/buttonPrimary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Add party"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/addPartyLocation"
        app:layout_constraintStart_toStartOf="@+id/addPartyLocation" />




</androidx.constraintlayout.widget.ConstraintLayout>